--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,11 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "axios": "^1.4.0"
+    "axios": "^1.4.0",
+    "chart.js": "^4.5.0",
+    "react-chartjs-2": "^5.3.0",
+    "chartjs-chart-financial": "^0.2.1",
+    "@amcharts/amcharts4": "^4.10.32"
   },
   "devDependencies": {
     "typescript": "^5.0.0",
